--- a/demo2/build.gradle
+++ b/demo2/build.gradle
@@ -23,12 +23,19 @@ repositories {
 	mavenCentral()
 }
 
+bootJar {
+	baseName = 'gs-accessing-data-mysql'
+	version =  '0.1.0'
+}
+
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-web')
-	runtimeOnly('com.h2database:h2')
+	compile('com.h2database:h2')
 	runtimeOnly('mysql:mysql-connector-java')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
-	compile "org.springframework.boot:spring-boot-starter-security"
+
+	compile("org.springframework:spring-jdbc")
+//	compile "org.springframework.boot:spring-boot-starter-security"
 }
