--- a/demo2/src/main/resources/application.properties
+++ b/demo2/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8082
+server.port=8087
 
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/demo2
 spring.datasource.username=root
 spring.datasource.password=root
