java changes comment added

--- a/demo2/build.gradle
+++ b/demo2/build.gradle
@@ -23,10 +23,10 @@ repositories {
 	mavenCentral()
 }
 
-bootJar {
-	baseName = 'gs-securing-web'
-	version =  '0.1.0'
-}
+//bootJar {
+//	baseName = 'gs-securing-web'
+//	version =  '0.1.0'
+//}
 
 
 dependencies {
@@ -37,5 +37,5 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 
 	compile("org.springframework:spring-jdbc")
-	compile "org.springframework.boot:spring-boot-starter-security"
+//	compile "org.springframework.boot:spring-boot-starter-security"
 }
